--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,11 +2,13 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
-        <h1>Sidebar Layouts are difficult</h1>
-        <p>This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text.
-          This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text.
-          This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text.
-          This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text. This is text. </p>
+        <h1>Verander naam</h1>
+        <p class="form-inline" [formGroup]="naamForm">
+          <input type="text" formControlName="naam" value={{naam.value}}>
+          <button class="btn btn-primary" (click)="changeName()">
+            <fa name="check"></fa>
+          </button>
+        </p>
       </div>
     </div>
   </div>
