--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -28,8 +28,9 @@
           </tbody>
         </table>
         <div class="onderkant">
-          <button class="btn btn-primary btn-success bottom-buttons" (click)="addRunner()">Voeg deelnemer toe</button>
-          <button class="btn btn-primary btn-success bottom-buttons" (click)="fillResults()">Resultaten invullen</button>
+          <button class="btn btn-success bottom-buttons normal-button" (click)="addRunner()">Voeg deelnemer toe</button>
+          <button class="btn btn-success bottom-buttons normal-button" (click)="fillResults()">Resultaten invullen</button>
+          <button class="btn btn-danger bottom-buttons" (click)="resetResults()">Uitslag resetten</button>
         </div>
       </div>
     </div>
