--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,24 +1,5 @@
+
 /* Sidebar */
-
-
-
-.sidebar{
-  z-index: 1;
-  position: absolute;
-  width: 20px;
-  height: 100%;
-  overflow-y: hidden;
-  background: #2c3e50;
-}
-
-.opened {
-  width: 250px;
-}
-
-.sidebar-nav {
-  padding: 0;
-  list-style: none;
-}
 
 .sidebar-nav li {
   text-indent: 20px;
@@ -34,6 +15,11 @@
   overflow: hidden;
   text-overflow: clip;
   color: #ddd;
+}
+
+.sidebar-nav {
+  padding: 0;
+  list-style: none;
 }
 
 .opened .sidebar-nav li a:hover {
@@ -65,6 +51,36 @@
   text-decoration: none;
   font-weight: bold;
   font-size: 1.2em;
+}
+
+@media (max-width: 650px) {
+  .sidebar {
+    width: 0;
+    position: relative;
+    overflow-y: hidden;
+    background: #2c3e50;
+  }
+
+  .opened {
+    width: 100%;
+    margin-top: 60px;
+  }
+}
+
+@media (min-width: 651px) {
+  .sidebar{
+    z-index: 10;
+    position: fixed;
+    margin-top: 82px;
+    width: 20px;
+    height: calc(100% - 82px);
+    overflow-y: hidden;
+    background: #2c3e50;
+  }
+
+  .opened {
+    width: 250px;
+  }
 
 }
 
