--- a/src/app/components/list/list.component.css
+++ b/src/app/components/list/list.component.css
@@ -3,6 +3,9 @@
   width: 100%;
   position: absolute;
   padding: 15px;
+  height: calc(100% - 82px);
+  background-color: white;
+  margin-top: 82px;
 }
 
 .opened {
@@ -37,5 +40,12 @@ li {
   flex-wrap: wrap;
 }
 
-
+@media (max-width: 650px) {
+  .content-wrapper {
+    width: 100%;
+    position: relative;
+    padding: 15px;
+    margin-top: 0;
+  }
+}
 
