--- a/src/app/modals/add-modal/add-modal.component.html
+++ b/src/app/modals/add-modal/add-modal.component.html
@@ -3,8 +3,8 @@
   <button class="close" type="button" (click)="modalService.dismissAll('Cross click')">x</button>
 </div>
 <div class="modal-body">
-  <form class="form-inline mx-sm-3 mb-2" [formGroup]="myForm">
+  <form class="form-inline mx-sm-3 mb-2" [formGroup]="myForm" (submit)="addRace()">
     <input class="form-control" formControlName="name">
-    <button type="button" class="btn btn-primary ml-2" (click)="addRace(myForm.value.name)">Add</button>
+    <button type="submit" class="btn btn-primary ml-2">Add</button>
   </form>
 </div>
