button om tijd in te vullen bij invullen resultaten scrollt nu automatisch naar boven

--- a/src/app/modals/invullen-modal/invullen-modal.component.html
+++ b/src/app/modals/invullen-modal/invullen-modal.component.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="preview-lijst">
+  <div #previewList class="preview-lijst">
     <table class="table">
       <thead>
         <tr>
