--- a/src/app/modals/invullen-modal/invullen-modal.component.html
+++ b/src/app/modals/invullen-modal/invullen-modal.component.html
@@ -13,7 +13,7 @@
                  #startVeld
                  formControlName="startnummer"
                  matInput
-                 type="text"
+                 type="number"
                  placeholder="Startnummer ([enter] dient in)"
                  (keyup.enter)="submitStartnummer()"
                  autocomplete="off"
