--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
+<app-header class="d-print-none"></app-header>
+<app-sidebar class="d-print-none"></app-sidebar>
 <router-outlet></router-outlet>
