--- a/src/app/modals/invullen-modal/invullen-modal.component.css
+++ b/src/app/modals/invullen-modal/invullen-modal.component.css
@@ -44,3 +44,14 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+  -moz-appearance:textfield; /* Firefox */
+}
