--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -4,13 +4,14 @@
       <div class="col-lg-12">
         <div class="bovenkant">
           <h1>{{naam}}</h1>
-          <div class="bovenmidden">
-            <button class="btn btn-success bottom-buttons normal-button" (click)="addRunner()">Voeg deelnemer toe</button>
-            <button class="btn btn-success bottom-buttons normal-button" [routerLink]="['/print']">Print uitslag</button>
+          <div class="bovenrechts">
+<!--            <button class="btn btn-success bottom-buttons normal-button" (click)="addRunner()">Voeg deelnemer toe</button>-->
+<!--            <button class="btn btn-success bottom-buttons normal-button" [routerLink]="['/print']">Print uitslag</button>-->
+            <a (click)="addRunner()"><fa name="user-plus"></fa></a>
+            <a [routerLink]="['/print']"><fa name="print"></fa></a>
+            <a (click)="removeRace()"><fa name="trash"></fa></a>
           </div>
-          <a (click)="removeRace()"><fa class="bovenlinks" name="trash"></fa></a>
         </div>
-        <!--<h1>{{naam}}<a class="rechts-float" (click)="removeRace()"><fa name="trash"></fa></a></h1>-->
         <table class="table">
           <thead class="thead-light">
             <tr>
