--- a/src/app/components/uitslag/uitslag.component.css
+++ b/src/app/components/uitslag/uitslag.component.css
@@ -1,3 +1,12 @@
 table {
   font-size: .8em;
 }
+
+.top3 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.trofee {
+  margin-left: 20px;
+}
