undo knop bij invullen tijden

--- a/src/app/modals/invullen-modal/invullen-modal.component.html
+++ b/src/app/modals/invullen-modal/invullen-modal.component.html
@@ -38,6 +38,7 @@
     <div class="bot-buttons">
       <button class="btn btn-primary" (click)="modalService.dismissAll('Cancelled')">Cancel</button>
       <button class="btn btn-primary" (click)="submitAll()">Submit lijst</button>
+      <button class="btn btn-warning" (click)="undo()">Oops!</button>
     </div>
   </div>
 
