--- a/src/app/components/uitslag/uitslag.component.html
+++ b/src/app/components/uitslag/uitslag.component.html
@@ -1,16 +1,16 @@
 <table class="table">
   <thead class="thead-light">
     <tr>
-      <th scope="col" width="50px">Rangschikking</th>
+      <th *ngIf="heeftRanking" scope="col" width="50px">Rangschikking</th>
       <th scope="col" width="50px">Startnummer</th>
       <th scope="col" style="min-width: 250px">Naam</th>
       <th scope="col">Geslacht</th>
-      <th scope="col">Tijd</th>
+      <th *ngIf="heeftUitslag" scope="col">Tijd</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let col of runners">
-      <td class="top3">
+      <td *ngIf="heeftRanking" class="top3">
         <span>{{col.ranking}}</span>
         <fa *ngIf="isTop3(col)" name="trophy"></fa>
       </td>
@@ -20,7 +20,7 @@
         <fa class="trofee" *ngIf="isTop3(col)" name="trophy"></fa>
       </td>
       <td>{{col.gender}}</td>
-      <td>{{col.finish ? showTime(col) : ""}}</td>
+      <td *ngIf="heeftUitslag" >{{col.finish ? showTime(col) : ""}}</td>
     </tr>
   </tbody>
 </table>
