--- a/src/app/modals/add-deelnemer-modal/add-deelnemer-modal.component.html
+++ b/src/app/modals/add-deelnemer-modal/add-deelnemer-modal.component.html
@@ -28,8 +28,12 @@
       <tr class="form-group row">
         <label formGroupName="gender">
           <td>Geslacht:</td>
-          <td><input type="radio" formControlName="genderValue" value="M" required> <fa name="mars"></fa></td>
-          <td><input type="radio" formControlName="genderValue" value="V" required> <fa name="venus"></fa></td>
+          <td style="margin-right: 15px">
+            <input id="man" type="radio" formControlName="genderValue" value="M" required> <label for="man"><fa name="mars"></fa></label>
+          </td>
+          <td>
+            <input id="vrouw" type="radio" formControlName="genderValue" value="V" required> <label for="vrouw"><fa name="venus"></fa></label>
+          </td>
         </label>
       </tr>
     </table>
